--- a/src/Drones.Web.Host/Drones.Web.Host.csproj
+++ b/src/Drones.Web.Host/Drones.Web.Host.csproj
@@ -33,6 +33,8 @@
   </ItemGroup>
   <ItemGroup>
     <PackageReference Include="Abp.Castle.Log4Net" Version="8.1.0" />
+    <PackageReference Include="Abp.HangFire.AspNetCore" Version="8.2.0" />
+    <PackageReference Include="Hangfire.PostgreSql" Version="1.19.12" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="7.0.3">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
